Fix Edge blurred pixels issue by using secondary canvas

--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -60,6 +60,13 @@ body {
     opacity: 1;
 }
 
+#viewport-canvas {
+    height: calc(100vh - 85px);
+    position:absolute;top:0px;
+    left:0px;
+    z-index: 0;
+}
+
 #canvas-container {
     background-image: url("../img/background_patch.png");
     background-repeat: repeat;
@@ -74,6 +81,10 @@ body {
     image-rendering: -webkit-optimize-contrast;
     image-rendering: crisp-edges;
     image-rendering: pixelated;
+
+    opacity: 0;
+    position: relative;
+    z-index: 1000;
 }
 
 #subcanvas {
@@ -99,7 +110,7 @@ body {
     font-size: 14px;
     color: #ffffff;
     cursor: move;
-    
+
     font-family: Arial, Helvetica, sans-serif;
 }
 
